# cluster-spec-phot-pipeline

./: .gitignore  CLAUDE.md  README.md  analyze_cluster.ipynb  archival_z_pipeline.py  cluster.py  color_magnitude_plotting.py  my_utils.py  pyproject.toml  run_spec_phot_pipeline.py  run_xray_pipeline.py  session_log.md
spec_phot_pipeline/: README.md  archival_phot_pipeline.py  archival_z_pipeline.py  color_magnitude_pipeline.py  color_magnitude_plotting.py  make_catalogs_pipeline.py
src/cluster_pipeline/: __init__.py  cli.py  config.py  constants.py
src/cluster_pipeline/catalog/: matching.py  photometry.py  redsequence.py  spectroscopy.py
src/cluster_pipeline/io/: catalogs.py  images.py  tables.py
src/cluster_pipeline/models/: bcg.py  cluster.py  init_cluster.py  region.py  subcluster.py
src/cluster_pipeline/pipelines/: radio.py  spec_phot.py  xray.py
src/cluster_pipeline/plotting/: arcs.py  cmd.py  common.py  optical.py  subclusters.py  xray.py
src/cluster_pipeline/radio/: image.py
src/cluster_pipeline/subclusters/: assignment.py  builder.py  geometry.py  statistics.py
src/cluster_pipeline/utils/: __init__.py  coordinates.py  cosmology.py  resolvers.py
src/cluster_pipeline/xray/: analysis.py  image.py
tests/: test_config.py  test_integration.py  test_models.py  test_radio.py  test_statistics.py
tests/data/RMJ_0219/: BCGs.csv  config.yaml
tests/data/RMJ_0219/Photometry/: photometry_legacy.csv
xray_pipeline/: README.md  analyze_cluster.ipynb  process_redshifts.py  process_subclusters.py  xray_plotting.py
(+1 files in other folders)
